# serializer version: 1
# name: test_cannot_send_message_again_without_force
  list([
    "kukkuu@example.com|['johndoe@example.com']|Otsikko|Ruumisteksti.",
  ])
# ---
# name: test_message_sending[en]
  list([
    "kukkuu@example.com|['johndoe@example.com']|Subject|Body text.",
  ])
# ---
# name: test_message_sending[fi]
  list([
    "kukkuu@example.com|['johndoe@example.com']|Otsikko|Ruumisteksti.",
  ])
# ---
# name: test_message_sending_with_filters[event-all]
  list([
    list([
      'attended-another-event@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-1@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-2@example.com',
    ]),
    list([
      'enrolled-another-event@example.com',
    ]),
    list([
      'enrolled-both-events@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-2@example.com',
    ]),
    list([
      'subscribed-another-event@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-2@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[event-attended]
  list([
    list([
      'attended-occurrence-yesterday-1@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-2@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[event-enrolled]
  list([
    list([
      'enrolled-both-events@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-2@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[event-invited]
  list([
    list([
      'attended-another-event@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-1@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-2@example.com',
    ]),
    list([
      'enrolled-another-event@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-2@example.com',
    ]),
    list([
      'subscribed-another-event@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-2@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[event-subscribed_to_free_spot_notification]
  list([
    list([
      'subscribed-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-2@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[no_event_or_occurrence-all]
  list([
    list([
      'attended-another-event@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-1@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-2@example.com',
    ]),
    list([
      'enrolled-another-event@example.com',
    ]),
    list([
      'enrolled-both-events@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-2@example.com',
    ]),
    list([
      'subscribed-another-event@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-2@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[no_event_or_occurrence-attended]
  list([
    list([
      'attended-another-event@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-1@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-2@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[no_event_or_occurrence-enrolled]
  list([
    list([
      'enrolled-another-event@example.com',
    ]),
    list([
      'enrolled-both-events@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-2@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[no_event_or_occurrence-invited]
  list([
    list([
      'attended-another-event@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-1@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-2@example.com',
    ]),
    list([
      'enrolled-another-event@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-2@example.com',
    ]),
    list([
      'subscribed-another-event@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-2@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[no_event_or_occurrence-subscribed_to_free_spot_notification]
  list([
    list([
      'subscribed-another-event@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-2@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[occurrence_tomorrow_1-all]
  list([
    list([
      'attended-another-event@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-1@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-2@example.com',
    ]),
    list([
      'enrolled-another-event@example.com',
    ]),
    list([
      'enrolled-both-events@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-2@example.com',
    ]),
    list([
      'subscribed-another-event@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-2@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[occurrence_tomorrow_1-attended]
  list([
  ])
# ---
# name: test_message_sending_with_filters[occurrence_tomorrow_1-enrolled]
  list([
    list([
      'enrolled-both-events@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-1@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[occurrence_tomorrow_1-invited]
  list([
    list([
      'attended-another-event@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-1@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-2@example.com',
    ]),
    list([
      'enrolled-another-event@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-2@example.com',
    ]),
    list([
      'subscribed-another-event@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-2@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[occurrence_tomorrow_1-subscribed_to_free_spot_notification]
  list([
    list([
      'subscribed-occurrence-tomorrow-1@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[occurrence_yesterday_1-all]
  list([
    list([
      'attended-another-event@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-1@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-2@example.com',
    ]),
    list([
      'enrolled-another-event@example.com',
    ]),
    list([
      'enrolled-both-events@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-2@example.com',
    ]),
    list([
      'subscribed-another-event@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-2@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[occurrence_yesterday_1-attended]
  list([
    list([
      'attended-occurrence-yesterday-1@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[occurrence_yesterday_1-enrolled]
  list([
  ])
# ---
# name: test_message_sending_with_filters[occurrence_yesterday_1-invited]
  list([
    list([
      'attended-another-event@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-1@example.com',
    ]),
    list([
      'attended-occurrence-yesterday-2@example.com',
    ]),
    list([
      'enrolled-another-event@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'enrolled-occurrence-tomorrow-2@example.com',
    ]),
    list([
      'subscribed-another-event@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-1@example.com',
    ]),
    list([
      'subscribed-occurrence-tomorrow-2@example.com',
    ]),
  ])
# ---
# name: test_message_sending_with_filters[occurrence_yesterday_1-subscribed_to_free_spot_notification]
  list([
  ])
# ---
